health-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-pod
spec:
  containers:
    - name: health
      image: ubahhukob/health:latest
      ports:
      - containerPort: 8000
